--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,7 +4,7 @@
   "description": "package for the backEnd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
