Wrote npm start so you can see what the back end prints

--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,6 +4,7 @@
   "description": "package for the backEnd",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server/index.js",
     "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js"
   },
   "author": "",
