--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "knex": "^0.14.4",
     "koa": "^2.5.0",
@@ -22,6 +23,9 @@
     "chai-http": "^3.0.0",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "mocha": "^5.0.4"
   }
 }
