--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.3.0",
     "babel-jest": "^22.4.3",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "jest-cli": "^22.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "typescript": "^2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +25,6 @@
   },
   "jest": {
     "verbose": true,
-    "setupFiles": ["./test/jestsetup.js"],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
