--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jest-cli": "^22.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "typescript": "^2.7.2"
   },
