--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.1",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "knex": "^0.14.4",
