--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "jest-cli": "^22.4.3",
     "qs": "^6.5.1",
+    "radium": "^0.24.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
