--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "5.7.1",
+    "node": "9.5.0"
+  },
   "dependencies": {
     "ajv": "^6.3.0",
     "axios": "^0.18.0",
